--- a/notebooks/EDA-Statistics-ProbabilityCalculations.ipynb
+++ b/notebooks/EDA-Statistics-ProbabilityCalculations.ipynb
@@ -25,14 +25,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe634563-1355-47a3-8e91-a312c63da599",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "b4242e8f-b0df-4887-a45e-e3b4084a8e43",
    "metadata": {},
@@ -40,7 +32,7 @@
     "# Collision Statistics and Probability Calculations\n",
     "\n",
     "## GOAL: \n",
-    "### We seek to explore our collision datasets in order to determine whether causes of collisions and the details collected about these collisions are consistent across age groups, or if there are unique and emerging themes about these collisions that emerge from the data.  This will help us to determine and better advise the State Officials on whether they should continue to advertise about collision awareness and driving habits in general terms across the entire population, or if these advertising campaigns should be more age specific.\n",
+    "### We seek to explore our collision datasets in order to determine whether causes of collisions and the details collected about these collisions are consistent across age groups, or if there are unique and emerging themes about these collisions that are evident from the data.  This will help us to determine and better advise the State Officials on whether they should continue to advertise about collision awareness and driving habits in general terms across the entire population, or if these advertising campaigns should be more age specific.\n",
     "\n",
     "#### Let's jump into the data ..."
    ]
@@ -210,7 +202,7 @@
    "id": "4348862c-55aa-4a9e-961d-0c9734b7c04f",
    "metadata": {},
    "source": [
-    "#### What we observe here makes sense when you consider how many cars would be on the roads at these various hours.  There are more drivers out during the day than there are in the evenings, particularly driving to work (7-10) and driving home from work (2-6).  So it stands to reason that we would expect to see more accidents occuring during these times.  I suspect we'd see more collisions caused by speeding in these hours to and from work (either late or really want to get home) and perhaps more accidents caused by falling asleep in the early morning hours just after midnight.  This is just speculation, but we can do better.  Let's check to see what the distribution of fatal accidents is."
+    "#### What we observe here makes sense when you consider how many cars would be on the roads at these various hours.  There are more drivers out during the day than there are in the evenings, particularly work commute times bewteen (7-10) and (2-6).  So it stands to reason that we would expect to see more accidents occuring during these times.  I suspect we'd see more collisions caused by speeding in these hours to and from work (either late for work or really want to get home) and perhaps more accidents caused by falling asleep in the early morning hours just after midnight.  This is just speculation, but we can do better.  Let's check to see what the distribution of fatal accidents is."
    ]
   },
   {
@@ -520,7 +512,7 @@
    "metadata": {},
    "source": [
     "### Key Take-aways: \n",
-    "#### - An accident that occurs in the early hours of the morning (between 1 - 4am) is up to 4x more likely to be fatal than accidents that occur in during peak traffic (between 3 - 6 pm).\n",
+    "#### - An accident that occurs in the early hours of the morning (between 1 - 4am) is up to 4x more likely to be fatal than accidents that occur during peak traffic hours (between 3 - 6 pm).\n",
     "#### - If the amount of cars on the road or even number of accidents per hour are not contributors to this observation, something else is causing this disproportionate rate in fatalites in the early morning collisions.  \n",
     "\n",
     "### New Questions that emerge:\n",
@@ -834,14 +826,6 @@
     "\n",
     "### Let's dive a little deeper into the causes of collisions by age group."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fda440a-370e-4e75-a621-96260b58ddee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1310,14 +1294,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4084182-45c4-4fe0-91bd-3283b53a43c1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "078dd3ac-5719-41db-9408-7d3f8b8d3f35",
    "metadata": {},
@@ -1354,7 +1330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Use these inque case ids to find all the ages of persons involved with alcohol\n",
+    "#Use these unique case ids to find all the ages of persons involved with alcohol\n",
     "alcohol_ages = parties.loc[(parties['at_fault']==1) & (parties['case_id'].isin(case_ids)), 'party_age']"
    ]
   },
@@ -1362,7 +1338,9 @@
    "cell_type": "code",
    "execution_count": 88,
    "id": "8b36dcfb-8ca4-419c-bcae-0a647290f198",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1410,7 +1388,7 @@
     "#Create a list of case_ids of these cases to cross reference with the parties table that has the ages\n",
     "case_ids = dui_cases['case_id'].unique()\n",
     "\n",
-    "#Use these inque case ids to find all the ages of persons involved with alcohol\n",
+    "#Use these unique case ids to find all the ages of persons involved with alcohol\n",
     "dui_ages = parties.loc[(parties['at_fault']==1) & (parties['case_id'].isin(case_ids)), 'party_age']"
    ]
   },
@@ -1512,22 +1490,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "354756c9-0ffe-46f8-974b-a40a4bfebc53",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35dde3ef-f9de-4a78-8031-b6b51050de13",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "7293ed58-2b1a-4a34-9bdf-adade87b8911",
    "metadata": {},
@@ -1548,7 +1510,7 @@
     "#Create a list of case_ids of these cases to cross reference with the parties table that has the ages\n",
     "case_ids = sleep_cases['case_id'].unique()\n",
     "\n",
-    "#Use these inque case ids to find all the ages of persons involved with alcohol\n",
+    "#Use these unique case ids to find all the ages of persons involved with alcohol\n",
     "sleep_ages = parties.loc[(parties['at_fault']==1) & (parties['case_id'].isin(case_ids)), 'party_age']"
    ]
   },
@@ -1643,16 +1605,8 @@
    "id": "4f49a56e-2b9f-4072-bd42-40d0b1f7c95b",
    "metadata": {},
    "source": [
-    "### The ratios are fairly even across the age-groups, but we do see a small uptick in drivers betwee nthe ages of 30-39, but a major increase (by nearly 3 times) in the 80-89 range.  Thus, more of an issue for the more aged population than it is for the younger population."
+    "### The ratios are fairly even across the age-groups, but we do see a small uptick in drivers between the ages of 30-39, but a major increase (by nearly 3 times) in the 80-89 range.  Thus, more of an issue for the more aged population than it is for the younger population."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f02696f5-21d4-41ad-8da3-d0938def98d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1667,7 +1621,7 @@
    "id": "549c4461-ce78-4b8c-b9a1-2df8013144d2",
    "metadata": {},
    "source": [
-    "### While this has not been an exhaustive exploration into every cause of collision, it's been made clear that there are certain causes of collision that are more prevalant for one age group that is not as prevalent for the next.  Some groups are more prone to driving under the influence, while others are more prone to falling asleep behind the wheel.  Thus, when it comes to marketing and advertising campaigns designed to inform the public in order to minimize accidents and the injuries/fatalities caused by them, a one-size-all approach may not be the most effective method.  We should instead be tailoring the advertisments to speak directly to the different age-groups in order to capture more people's attention, whereby being more effective in generating awareness of collisions and hopefully encourage better driving habits. \n",
+    "### While this has not been an exhaustive exploration into every cause of collision, it's been made clear that there are certain causes of collisions that are more prevalant for one age group that is not as prevalent for the next.  Some groups are more prone to driving under the influence, while others are more prone to falling asleep behind the wheel.  Thus, when it comes to marketing and advertising campaigns aimed at the public to minimize accidents and associated injuries or fatalities, a one-size-all approach may not be the most effective method.  We should instead be tailoring the advertisments to speak directly to the different age-groups in order to capture more people's attention, whereby being more effective in generating awareness of collisions and hopefully encourage better driving habits. \n",
     "\n",
     "# Next Steps:\n",
     "\n",
@@ -1677,7 +1631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d8134ca-411e-4c16-8eff-3f424bbe7f1f",
+   "id": "3d461cf5-640e-48e6-b387-46c8aee2d07d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1685,9 +1639,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LHL_env",
+   "display_name": "LHL_python_environment",
    "language": "python",
-   "name": "lhl_env"
+   "name": "lhl_python_environment"
   },
   "language_info": {
    "codemirror_mode": {
